[package]
name = "faktory-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4"] }
async-recursion = "1.0.0"
