[package]
name = "faktory-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "sync", "rt", "time"] }
thiserror = "1"
faktory-lib-async = { git = "https://github.com/systeminit/faktory-lib-async", branch = "main" }
rand = "0.8"

[dev-dependencies]
uuid = { version = "1.0.0", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
